--- a/app/src/main/res/layout/spending_editor.xml
+++ b/app/src/main/res/layout/spending_editor.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="10dp"
-    android:layout_marginHorizontal="10dp"
-    tools:context=".MainActivity">
+    android:layout_marginHorizontal="10dp">
 
     <TextView
         android:id="@+id/spending_name_label"
