--- a/app/src/main/res/layout/spendings_list.xml
+++ b/app/src/main/res/layout/spendings_list.xml
@@ -3,18 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="10dp"
-    android:layout_marginHorizontal="10dp">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/spending_name_label"
+    <androidx.recyclerview.widget.RecyclerView
+        tools:listitem="@layout/spendings_list_item"
+        android:id="@+id/spendings_list"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_new_spending_fab"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Spendings List!"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/ic_baseline_add"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+    </com.google.android.material.floatingactionbutton.FloatingActionButton>
 </androidx.constraintlayout.widget.ConstraintLayout>
